# cmake-verilog-vhdl-fpga-template

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/altera/: fifo.v
lib/model/: fifo.v
lib/xilinx/: fifo.vhd
pnr/: CMakeLists.txt
pnr/altera/: CMakeLists.txt  synscript.tcl  synscript.tcl.in
pnr/xilinx/: CMakeLists.txt
sim/: CMakeLists.txt
src/: CMakeLists.txt  adder.vhd  buffer.v  buffer_tb.v
src/altera/: CMakeLists.txt
src/model/: CMakeLists.txt
src/xilinx/: CMakeLists.txt  fifo.ucf  fifo.vhd
